# mm-lp-evaluation-sample

./: .gitignore  Makefile  README.md  debug_pro.py  debug_reku.py  debug_tokocrypto.py  mm-lp-evaluation-framework-brief.md  pyproject.toml  requirements.txt  research_report.md
data/raw/: collection_errors.csv  data_dictionary.md  klines_binance_BTCUSDT_1m.csv  klines_binance_BTCUSDT_5m.csv  klines_tokocrypto_BTC_IDR_1m.csv  orderbook_binance_BTCUSDT.csv  orderbook_reku_BTCIDR.csv  orderbook_reku_USDTIDR.csv  orderbook_tokocrypto_BTCIDR.csv  orderbook_tokocrypto_BTCUSDT.csv  orderbook_tokocrypto_BTC_IDR.csv  orderbook_tokocrypto_BTC_USDT.csv  orderbook_tokocrypto_USDTIDR.csv  orderbook_tokocrypto_USDT_IDR.csv  ticker_indodax_BTCIDR.csv  ticker_indodax_USDTIDR.csv
deploy/: mm-lp-poller.service
framework/: __init__.py  assessor.py  metrics.py  mm_evaluation_rubric.md  sla_design_guide.md
notebooks/: 01_data_collection.ipynb  02_liquidity_diagnostics.ipynb  02_liquidity_diagnostics_output.ipynb  03_cross_exchange_comparison.ipynb  03_cross_exchange_comparison_output.ipynb  04_synthetic_mm_models.ipynb  04_synthetic_mm_models_output.ipynb  05_decision_threshold_model.ipynb
scripts/: filter_legacy_data.py  generate_sharper_visuals.py  poll_orderbooks.py
scripts/data/raw/: collection_errors.csv  orderbook_binance_BTCUSDT.csv  orderbook_reku_BTCIDR.csv  orderbook_reku_USDTIDR.csv  orderbook_tokocrypto_BTCIDR.csv  orderbook_tokocrypto_BTCUSDT.csv  orderbook_tokocrypto_USDTIDR.csv  (+5 more)
tests/: test_assessor.py  test_metrics.py  test_poll_orderbooks.py
