[project]
name = "mm-lp-evaluation"
version = "0.1.0"
description = "Liquidity Provider Evaluation Framework"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "schedule>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
notebook = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]